# boot-hackerrank

./: .travis.yml  CMakeLists.txt  README.md
cmake/: Catch2-CMakeLists.txt.in  Catch2.cmake  Coverage.cmake  CppCheck.cmake  Testing.cmake
src/: main.cpp  solution.hpp
test/io/: basic_solution.io
test/unit/: solution_test.cpp
tools/: read-io.sh  test-runner.sh
